--- a/BDDBehave/Bucket/login_tests/steps/config.ini
+++ b/BDDBehave/Bucket/login_tests/steps/config.ini
@@ -1,6 +1,6 @@
 [environment]
 browser=firefox
-wait=10
+wait_time=10
 url=https://cleveronly.com/brainbucket/index.php?route=account/login
 
 [user1]
